--- a/serial/.cproject
+++ b/serial/.cproject
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?>
-
-<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="blackfin.toolchain.configuration.debug.2069093482">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="blackfin.toolchain.configuration.debug.2069093482" moduleId="org.eclipse.cdt.core.settings" name="Debug">
@@ -22,10 +20,11 @@
 								<option id="assembler.option.debugcode.1994514183" name="Generate debug information (-g)" superClass="assembler.option.debugcode"/>
 								<option id="assembler.option.proc.1885725921" name="-proc" superClass="assembler.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 								<option id="assembler.option.sirevision.2144652713" name="-si-revision" superClass="assembler.option.sirevision" value=" any" valueType="string"/>
-								<option id="assembler.option.preprocessdefs.189455477" name="Preprocessor definitions (-D):" superClass="assembler.option.preprocessdefs" valueType="definedSymbols">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="assembler.option.preprocessdefs.189455477" name="Preprocessor definitions (-D):" superClass="assembler.option.preprocessdefs" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="_DEBUG"/>
+									<listOptionValue builtIn="false" value="CORE0"/>
 								</option>
-								<option id="assembler.option.additionaldirectories.707055013" name="Additional include directories (-I):" superClass="assembler.option.additionaldirectories" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="assembler.option.additionaldirectories.707055013" name="Additional include directories (-I):" superClass="assembler.option.additionaldirectories" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/system}&quot;"/>
 								</option>
 								<inputType id="assembler.input.703765173" name="Assembler Source" superClass="assembler.input"/>
@@ -35,13 +34,15 @@
 								<option id="compiler.option.debugcode.1991068203" name="Generate debug information (-g)" superClass="compiler.option.debugcode"/>
 								<option id="compiler.option.proc.1695817421" name="-proc" superClass="compiler.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 								<option id="compiler.option.sirevision.843124931" name="-si-revision" superClass="compiler.option.sirevision" value=" any" valueType="string"/>
-								<option id="compiler.option.preprocessdefs.1434297557" name="Preprocessor definitions (-D):" superClass="compiler.option.preprocessdefs" valueType="definedSymbols">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="compiler.option.preprocessdefs.1434297557" name="Preprocessor definitions (-D):" superClass="compiler.option.preprocessdefs" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="_DEBUG"/>
+									<listOptionValue builtIn="false" value="CORE0"/>
 								</option>
-								<option id="compiler.option.additionaldirectories.738640590" name="Additional include directories (-I):" superClass="compiler.option.additionaldirectories" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="compiler.option.additionaldirectories.738640590" name="Additional include directories (-I):" superClass="compiler.option.additionaldirectories" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/system}&quot;"/>
 								</option>
 								<option id="blackfin.compiler.option.cplbenable.1450674369" name="CPLBs are enabled (-cplbs)" superClass="blackfin.compiler.option.cplbenable" value="true" valueType="boolean"/>
+								<option id="compiler.option.coreid.1843639824" superClass="compiler.option.coreid" value="0" valueType="string"/>
 								<inputType id="compiler.inputType.938194473" name="C/C++ Source" superClass="compiler.inputType"/>
 							</tool>
 							<tool id="blackfin.toolchain.linker.1614495902" name="CrossCore Blackfin Linker" superClass="blackfin.toolchain.linker">
@@ -50,11 +51,12 @@
 								<option id="linker.option.usedbglib.21735281" name="Use Debug System libraries (-add-debug-libpaths)" superClass="linker.option.usedbglib"/>
 								<option id="linker.option.proc.1431236479" name="-proc" superClass="linker.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 								<option id="linker.option.sirevision.845875113" name="-si-revision" superClass="linker.option.sirevision" value=" any" valueType="string"/>
-								<option id="linker.option.preprocessdefs.153147260" name="Preprocessor definitions (-MD)" superClass="linker.option.preprocessdefs" valueType="definedSymbols">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="linker.option.preprocessdefs.153147260" name="Preprocessor definitions (-MD)" superClass="linker.option.preprocessdefs" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="DEBUG"/>
+									<listOptionValue builtIn="false" value="CORE0"/>
 								</option>
 								<option id="linker.option.ldfprocessing.ldffile.1569745709" name="Custom LDF (-T)" superClass="linker.option.ldfprocessing.ldffile" value="${ProjDirPath}/system/startup_ldf/app.ldf" valueType="string"/>
-								<option id="linker.option.srchdir.1385369218" name="Library search directories (-L):" superClass="linker.option.srchdir" valueType="libPaths">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="linker.option.srchdir.1385369218" name="Library search directories (-L):" superClass="linker.option.srchdir" valueType="libPaths">
 									<listOptionValue builtIn="false" value="${OutDir}/system/startup_ldf"/>
 								</option>
 								<inputType id="linker.doj.input.831133836" name="Object Files" superClass="linker.doj.input"/>
@@ -66,6 +68,9 @@
 							<tool id="blackfin.toolchain.loader.1797463554" name="CrossCore Blackfin Loader" superClass="blackfin.toolchain.loader">
 								<option id="loader.option.proc.782476965" name="-proc" superClass="loader.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 								<option id="loader.option.sirevision.463761590" name="-si-revision" superClass="loader.option.sirevision" value=" any" valueType="string"/>
+							</tool>
+							<tool id="blackfin.toolchain.deviceprogrammer.1220846575" name="CrossCore Blackfin Device Programmer" superClass="blackfin.toolchain.deviceprogrammer">
+								<option id="deviceprogrammer.option.proc.876816564" name="-proc" superClass="deviceprogrammer.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 							</tool>
 						</toolChain>
 					</folderInfo>
@@ -97,10 +102,11 @@
 								<option id="assembler.option.debugcode.1497587341" name="Generate debug information (-g)" superClass="assembler.option.debugcode" value="false" valueType="boolean"/>
 								<option id="assembler.option.proc.1446990941" name="-proc" superClass="assembler.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 								<option id="assembler.option.sirevision.913594033" name="-si-revision" superClass="assembler.option.sirevision" value=" any" valueType="string"/>
-								<option id="assembler.option.preprocessdefs.1450070148" name="Preprocessor definitions (-D):" superClass="assembler.option.preprocessdefs" valueType="definedSymbols">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="assembler.option.preprocessdefs.1450070148" name="Preprocessor definitions (-D):" superClass="assembler.option.preprocessdefs" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="NDEBUG"/>
+									<listOptionValue builtIn="false" value="CORE0"/>
 								</option>
-								<option id="assembler.option.additionaldirectories.1758926742" name="Additional include directories (-I):" superClass="assembler.option.additionaldirectories" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="assembler.option.additionaldirectories.1758926742" name="Additional include directories (-I):" superClass="assembler.option.additionaldirectories" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/system}&quot;"/>
 								</option>
 								<inputType id="assembler.input.642213906" name="Assembler Source" superClass="assembler.input"/>
@@ -110,13 +116,15 @@
 								<option id="compiler.option.debugcode.1815073742" name="Generate debug information (-g)" superClass="compiler.option.debugcode" value="false" valueType="boolean"/>
 								<option id="compiler.option.proc.669413777" name="-proc" superClass="compiler.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 								<option id="compiler.option.sirevision.1112623971" name="-si-revision" superClass="compiler.option.sirevision" value=" any" valueType="string"/>
-								<option id="compiler.option.preprocessdefs.1741296483" name="Preprocessor definitions (-D):" superClass="compiler.option.preprocessdefs" valueType="definedSymbols">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="compiler.option.preprocessdefs.1741296483" name="Preprocessor definitions (-D):" superClass="compiler.option.preprocessdefs" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="NDEBUG"/>
+									<listOptionValue builtIn="false" value="CORE0"/>
 								</option>
-								<option id="compiler.option.additionaldirectories.1711836022" name="Additional include directories (-I):" superClass="compiler.option.additionaldirectories" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="compiler.option.additionaldirectories.1711836022" name="Additional include directories (-I):" superClass="compiler.option.additionaldirectories" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/system}&quot;"/>
 								</option>
 								<option id="blackfin.compiler.option.cplbenable.1964192326" name="CPLBs are enabled (-cplbs)" superClass="blackfin.compiler.option.cplbenable" value="true" valueType="boolean"/>
+								<option id="compiler.option.coreid.2140988492" superClass="compiler.option.coreid" value="0" valueType="string"/>
 								<inputType id="compiler.inputType.788429593" name="C/C++ Source" superClass="compiler.inputType"/>
 							</tool>
 							<tool id="blackfin.toolchain.linker.1342325464" name="CrossCore Blackfin Linker" superClass="blackfin.toolchain.linker">
@@ -125,11 +133,12 @@
 								<option id="linker.option.usedbglib.1597885530" name="Use Debug System libraries (-add-debug-libpaths)" superClass="linker.option.usedbglib" value="false" valueType="boolean"/>
 								<option id="linker.option.proc.90044010" name="-proc" superClass="linker.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 								<option id="linker.option.sirevision.1753169276" name="-si-revision" superClass="linker.option.sirevision" value=" any" valueType="string"/>
-								<option id="linker.option.preprocessdefs.571619466" name="Preprocessor definitions (-MD)" superClass="linker.option.preprocessdefs" valueType="definedSymbols">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="linker.option.preprocessdefs.571619466" name="Preprocessor definitions (-MD)" superClass="linker.option.preprocessdefs" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="RELEASE"/>
+									<listOptionValue builtIn="false" value="CORE0"/>
 								</option>
 								<option id="linker.option.ldfprocessing.ldffile.2086743877" name="Custom LDF (-T)" superClass="linker.option.ldfprocessing.ldffile" value="${ProjDirPath}/system/startup_ldf/app.ldf" valueType="string"/>
-								<option id="linker.option.srchdir.1956797154" name="Library search directories (-L):" superClass="linker.option.srchdir" valueType="libPaths">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="linker.option.srchdir.1956797154" name="Library search directories (-L):" superClass="linker.option.srchdir" valueType="libPaths">
 									<listOptionValue builtIn="false" value="${OutDir}/system/startup_ldf"/>
 								</option>
 								<inputType id="linker.doj.input.1072436619" name="Object Files" superClass="linker.doj.input"/>
@@ -141,6 +150,9 @@
 							<tool id="blackfin.toolchain.loader.1680707099" name="CrossCore Blackfin Loader" superClass="blackfin.toolchain.loader">
 								<option id="loader.option.proc.309682157" name="-proc" superClass="loader.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 								<option id="loader.option.sirevision.2092729742" name="-si-revision" superClass="loader.option.sirevision" value=" any" valueType="string"/>
+							</tool>
+							<tool id="blackfin.toolchain.deviceprogrammer.1640180676" name="CrossCore Blackfin Device Programmer" superClass="blackfin.toolchain.deviceprogrammer">
+								<option id="deviceprogrammer.option.proc.967805230" name="-proc" superClass="deviceprogrammer.option.proc" value=" ADSP-BF592-A" valueType="string"/>
 							</tool>
 						</toolChain>
 					</folderInfo>
@@ -189,4 +201,5 @@
 	<storageModule moduleId="refreshScope" versionNumber="1">
 		<resource resourceType="PROJECT" workspacePath="/bf592_m25p16_dpia"/>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 </cproject>
