--- a/serial/.project
+++ b/serial/.project
@@ -73,16 +73,23 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>com.analog.crosscore.deviceprogrammer.deviceprogrammerbuilder</name>
+			<triggers>auto,full,incremental,</triggers>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.analog.crosscore.managedbuilder.core.cleanbuilder</name>
+			<triggers>clean,</triggers>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.cdt.core.cnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
+		<nature>com.analog.crosscore.managedbuilder.core.CCESProjectNature</nature>
 	</natures>
-	<variableList>
-		<variable>
-			<name>CCES</name>
-			<value>file:/C:/Analog%20Devices/CrossCore%20Embedded%20Studio%201.0.1</value>
-		</variable>
-	</variableList>
 </projectDescription>
